# dbt-core-docker

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
dbt_poetry_docker/: .user.yml  profiles.yml
pizza_shop/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
pizza_shop/models/staging/: stg_foo.sql
