[tool.poetry]
name = "dbt-poetry-docker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.2,<3.9"
dbt-core = "^1.3.1"
dbt-bigquery = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
